fix content spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,3 +42,7 @@ img {
     width: 250px;
     padding: 20px;
 }
+
+#email {
+    margin-top: 100px;
+}
